--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
 }
 
 body {
-    background-color: pink;
+    background-color: blue;
 }
 
 h1 {
-    font-style: italic;
+    font-style: bold;
     color: green;
 }
