--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 }
 
 body {
-    background-color: blue;
+    background-color: pink;
 }
 
 h1 {
-    font-style: bold;
+    font-style: italic;
     color: green;
+    text-align: center;
 }
