--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
 
 h1 {
     font-style: italic;
-    color: green;
+    color: red;
+    text-align: center;
+}
+
+h2 {
+    color: white;
     text-align: center;
 }
